--- a/_release/popup/popup.html
+++ b/_release/popup/popup.html
@@ -42,7 +42,7 @@
 			<div style="display: flex; flex-direction: columm; align-items: stretch;">
 				<div id="disclaimer">
 					<input type="checkbox" id="security-risk-understood" name="security-risk-understood">
-					<label for="security-risk-understood">이 확장 기능의 보안 위험을 인지하고 있습니다.</label>
+					<label for="security-risk-understood">이 확장 기능의 <a href="https://github.com/PropulsiveFox/SejongCookieManager#%EB%B3%B4%EC%95%88-%EA%B2%BD%EA%B3%A0">보안 위험</a>을 인지하고 있습니다.</label>
 				</div>
 				<div id="save-container">
 					<div id="load-status"></div>
