3 hour limit, prevent portal, blackboard kick

--- a/_release/popup/popup.html
+++ b/_release/popup/popup.html
@@ -28,6 +28,7 @@
 						<input type="checkbox" id="kmitb" name="kmitb">
 						<div>블랙보드 로그아웃 하지 마라</div>
 					</div>
+					<div style="font-size: .7rem;">최대 3시간 제한이 있습니다.</div>
 					<div>
 						<input type="number" id="value-kmitb" min="1" step="1" max="999999">
 						<input type="radio" id="day-kmitb" name="unit-kmitb">
@@ -36,6 +37,21 @@
 						<label for="hour-kmitb">시간</label>
 						<input type="radio" id="minute-kmitb" name="unit-kmitb">
 						<label for="minute-kmitb">분</label>
+					</div>
+				</div>
+				<div>
+					<div class="flex-nowrap">
+						<input type="checkbox" id="uptlb" name="uptlb">
+						<div>포탈 써서 블랙보드 로그인 해줘</div>
+					</div>
+					<div>
+						<input type="number" id="value-uptlb" min="1" step="1" max="999999">
+						<input type="radio" id="day-uptlb" name="unit-uptlb">
+						<label for="day-uptlb">일</label>
+						<input type="radio" id="hour-uptlb" name="unit-uptlb">
+						<label for="hour-uptlb">시간</label>
+						<input type="radio" id="minute-uptlb" name="unit-uptlb">
+						<label for="minute-uptlb">분</label>
 					</div>
 				</div>
 			</div>
